# cold

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  mro_issues_report.txt  objects.inv  pyproject.toml  requirements-docs.txt  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/pages/: api_reference.doctree  contributing.doctree  examples.doctree  installation.doctree  quick_start.doctree
.doctrees/userguide/: index.doctree
.github/workflows/: docs-build-and-deploy.yml  generate_models.yml  run_tests.yml
_examples/: example_cr2032.py  schema_import.py
_sources/pages/: examples.rst.txt  installation.rst.txt  quick_start.rst.txt
cold/: __init__.py
cold/models/: customizations.py  generator.py
cold/ontology/: extractor.py  formatter.py  importer.py  loader.py  urls.json
cold/scripts/: check_imports.py  check_mro.py  preprocess_ttl.py  regenerate_models.py  resolve_imports.py  test.py
cold/utils/: __init__.py  helpers.py  sanitizers.py
docs/: conf.py  index.rst
docs/pages/: api_reference.rst  contributing.rst  installation.rst  quick_start.rst
docs/userguide/: index.rst
examples/: A_1_activation_test_proctocol_tcells.ipynb  A_2_Hybrid_pulse_power_characterization_test.ipynb  A_I_activation_test_proctocol_tcells.ipynb  JSON_ld_parameters_example.json  MnO2-primary-cell-12mA_CB2.csv  cr2032_metamodel.ipynb  csvw_table_schema_cr2032_discharge.json  d2_1_pybamm_test_example.ipynb  example.py  example_cccv_cycling.py  example_constant_current_discharging.py  example_cr2032.py  example_custom_cell.py  example_lithium_foil.py  example_lp57_electrolyte.py  mj1_cell_metadata.ipynb  mj1_metamodel.ipynb  test.ipynb
examples/notebooks/: mj1_metamodel.ipynb
examples/scripts/: example_cccv_cycling.py  example_constant_current_discharging.py  example_cr2032.py  pint_test.py  (+5 more)
pages/: api_reference.html  contributing.html  examples.html  installation.html  quick_start.html
scripts/: regenerate_models.py
tests/: test_basic_functionality.py  test_end_to_end.py
userguide/: index.html
(+5324 files in other folders)
